--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,10 @@
 p{font-family: 'Roboto Condensed', sans-serif;font-size: clamp(1rem, 0.9643rem + 0.1786vw, 1.25rem) !important;}
 h2{font-family: 'Roboto Condensed', sans-serif !important;font-size: clamp(1rem, 0.9643rem + 0.1786vw, 1.25rem) !important;}
 h1{font-family: 'Roboto Condensed', sans-serif;font-size: clamp(1rem, 0.9643rem + 0.1786vw, 1.25rem) !important;}
-textarea{font-family: 'Roboto Condensed', sans-serif;font-size: clamp(1rem, 0.7143rem + 1.4286vw, 3rem);}
+/* textarea{font-family: 'Roboto Condensed', sans-serif;font-size: clamp(1rem, 0.7143rem + 1.4286vw, 3rem);} */
 input{font-family: 'Roboto Condensed', sans-serif;}
-button{font-family: 'Roboto Condensed', sans-serif !important ;font-size: clamp(1rem, 0.9643rem + 0.1786vw, 1.25rem) !important;}
-a{font-family: 'Roboto Condensed', sans-serif !important;font-size: clamp(1rem, 0.9643rem + 0.1786vw, 1.25rem) !important;}
+button{font-family: 'Roboto Condensed', sans-serif !important ;font-size: clamp(0.75rem, 0.7232rem + 0.1339vw, 0.9375rem)!important;}
+a{font-family: 'Roboto Condensed', sans-serif; font-size: clamp(0.75rem, 0.7232rem + 0.1339vw, 0.9375rem)!important;}
 
 #root {
 text-align: center;
@@ -24,6 +24,23 @@ padding-right: 0 !important;
 
 
 @media screen and (min-width:320px){
+
+
+  .client-pic{
+    width: 140px;
+  }
+
+.download-solo{
+  font-size: 13px !important;
+}
+
+.designer-month{
+  position: absolute;
+  left: 0;
+  right: 0;
+  width: 100px;
+  margin: auto;
+}
 
 
   .img-zoom{
@@ -555,7 +572,7 @@ padding-right: 0 !important;
     .extra-designer{
       background-color: gold;
       border: 2px solid white;
-      width: 60px;
+      width: 140px;
     }
     
     .extra-deleted{
@@ -566,13 +583,13 @@ padding-right: 0 !important;
     .extra-approved{
       background-color: green;
       border: 2px solid white;
-      width: 60px;
+      width: 140px;
     }
     
     .extra-approval{
       background-color: #00eaff;
       border: 2px solid white;
-      width: 60px;
+      width: 140px;
     }
     
     .same{
@@ -593,6 +610,7 @@ padding-right: 0 !important;
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      font-size: 14px !important;
 
     
     }
@@ -695,6 +713,11 @@ padding-right: 0 !important;
 }
 
 @media screen and (min-width:768px){
+
+.client-pic{
+  width: 135px;
+}
+
   .partner-image {
     width: 150px;
     height: 150px;
@@ -771,6 +794,10 @@ aside.EmojiPickerReact.epr-main{
 }
 
 
+.extra-styles{
+  width: 200px;
+}
+
 
 
 }
@@ -803,6 +830,10 @@ aside.EmojiPickerReact.epr-main{
 }
 
 @media screen and (min-width:1440px) {
+
+  .client-pic{
+    width: 200px;
+  }
 
   .admin-links-only-designer{
     width: 200px;
@@ -961,6 +992,8 @@ aside.EmojiPickerReact.epr-main{
   border: 1px solid black!important;;
   color: #000;
   width: 20vw;
+  font-size: 13px !important;
+
  
 }
 
@@ -968,14 +1001,13 @@ aside.EmojiPickerReact.epr-main{
   margin-top: 10px;
   padding: 0;
   border-radius: 0;
-    height: 100px;
+    height: 120px;
     overflow-y: scroll;
 }
 
 
 
 .extra {
-  word-break: break-all;
   justify-content: center;
 }
 
@@ -1035,7 +1067,7 @@ button:hover{
 .nav-notsigned{
   display: flex;
   justify-content: space-between;
-  width: 110px;
+  width: 190px;
   padding-bottom: 10px;
 }
 
@@ -1298,7 +1330,7 @@ section{
 
 .style-status{
   color: black;
-  width: 50px;
+  width: 140px;
   margin: 0;
   cursor: pointer;
   border: 2px solid #194375 !important;
@@ -1307,7 +1339,7 @@ section{
 
 .status-div{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   height: 115px;
   justify-content: flex-end;
   align-items: center;
