--- a/src/App.css
+++ b/src/App.css
@@ -814,7 +814,7 @@ aside.EmojiPickerReact.epr-main{
     display: flex;
     position: absolute;
     margin-top: 125px;
-    width: 1000px;
+    width: 700px;
     align-items: center;
     justify-content: space-around;
   }
@@ -829,10 +829,10 @@ aside.EmojiPickerReact.epr-main{
   }
 }
 
-@media screen and (min-width:1440px) {
+@media screen and (min-width:1024px) {
 
   .client-pic{
-    width: 200px;
+    width: 100px;
   }
 
   .admin-links-only-designer{
@@ -900,8 +900,8 @@ aside.EmojiPickerReact.epr-main{
 }
 
 .txt-img{
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
 }
 
   .inside-user-levels{
@@ -951,7 +951,7 @@ aside.EmojiPickerReact.epr-main{
 
 .mapped-div{
   display: flex;
-  width:1000px;
+  width:850px;
   justify-content: space-around;
   margin: auto;
   border: none;
@@ -991,7 +991,7 @@ aside.EmojiPickerReact.epr-main{
 .same-map-text{
   border: 1px solid black!important;;
   color: #000;
-  width: 20vw;
+
   font-size: 13px !important;
 
  
@@ -1001,7 +1001,7 @@ aside.EmojiPickerReact.epr-main{
   margin-top: 10px;
   padding: 0;
   border-radius: 0;
-    height: 120px;
+    height: 75px;
     overflow-y: scroll;
 }
 
@@ -1019,7 +1019,7 @@ aside.EmojiPickerReact.epr-main{
 }
 
 .hidden-form-div{
-  width: 300px;
+  width: 200px;
 }
 
 .signup-form{
@@ -1151,7 +1151,7 @@ button:hover{
 
 .content-div{
   
-    width: 1300px;
+    width: 900px;
     margin: auto;
     margin-top: 50px;
     border: 2px solid black;
@@ -1166,12 +1166,14 @@ button:hover{
 .admin-links-only{
   display: flex;
   background-color: white;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  width: 100px;
+  justify-content: space-around;
+  width: 300px;
   position: fixed;
-  top: 18vh;
+  top: 15vh;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 
@@ -1234,7 +1236,7 @@ button:hover{
   width: 70vw;
     display: flex;
     justify-content: flex-start;
-    margin-left: 300px;
+    margin: auto;
     border-bottom: 5px solid gold;
 }
 
@@ -1259,7 +1261,7 @@ section{
 
 .fill-in-form{
   display: flex;
-  width: 1000px;
+  width: 850px;
   justify-content: space-between;
   margin: auto;
   align-items: center;
@@ -1340,7 +1342,6 @@ section{
 .status-div{
   display: flex;
   flex-direction: column;
-  height: 115px;
   justify-content: flex-end;
   align-items: center;
     margin-left: 20px;
@@ -1505,7 +1506,7 @@ section{
   display: flex;
     margin-top: 50px;
     margin-bottom: 10px;
-    width: 700px;
+    width: 550px;
     background-color: #194375;
     border: 3px solid gold;
     align-items: center;
@@ -1518,7 +1519,7 @@ section{
     min-height: 600px;
     border: 3px solid black;
     padding: 45px;
-    width: 700px;
+    width: 600px;
     word-break: break-word;
     align-items: center;
 }
@@ -1534,17 +1535,17 @@ section{
 
 .upload1{
   display: flex;
-    flex-direction: column;
-    height: 125px;
-    align-items: baseline;
-    justify-content: space-around;
-    margin-top: 50px;
+  flex-direction: column;
+  height: 125px;
+  justify-content: space-around;
+  margin-top: 50px;
+  align-items: flex-end;
 }
 
 .confirm-text{
   display: flex;
   align-items: center;
-  width: 706px;
+  width: 556px;
   justify-content: space-evenly;
   background-color: #194375;
   border: 3px solid gold
@@ -1558,7 +1559,7 @@ section{
     align-items: center;
     min-height: 600px;
     justify-content: space-around;
-    width: 169px
+    width: 145px
 }
 
 
