--- a/src/client/index.css
+++ b/src/client/index.css
@@ -14,3 +14,20 @@
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
 }
+
+
+#bp-web-widget-container{
+  position: relative;
+  z-index: 10000;
+}
+
+#bp-web-widget{
+bottom: 0 !important;
+right: 0 !important;
+}
+
+.bpw-widget-btn{
+  position: fixed !important;
+  right: 5px !important;
+  bottom: 5px !important; 
+}
