--- a/src/client/App.css
+++ b/src/client/App.css
@@ -81,3 +81,33 @@ input[type="file"] {
     
     
 }
+
+@media  screen and (min-width: 1440px) {
+    .react-datepicker{
+        width: 50vw;
+        margin: auto;
+    }
+
+
+    .react-datepicker__day, .react-datepicker__month-text, .react-datepicker__quarter-text, .react-datepicker__year-text {
+   
+        width: 7.5rem;
+        height: 4rem;
+        border:2px solid #fff;
+        outline: 2px solid #fff;
+        
+    }
+    
+    .react-datepicker__day-name {
+        width: 7.5rem;
+        height: 4rem;
+        line-height: 4rem;
+        border:2px solid #fff;
+        outline: 2px solid #fff;
+    }
+
+    
+    
+}
+
+
