--- a/src/client/App.css
+++ b/src/client/App.css
@@ -4,78 +4,78 @@ input[type="file"] {
 
 .react-datepicker__day, .react-datepicker__month-text, .react-datepicker__quarter-text, .react-datepicker__year-text {
    
-    width: 4rem;
-    height: 4rem;
-    border:2px solid #fff;
-    outline: 2px solid #fff;
+    width: 4rem!important;
+    height: 4rem!important;
+    border:2px solid #fff!important;
+    outline: 2px solid #fff!important;
     
 }
 
 .react-datepicker__day-name {
-    width: 4rem;
-    height: 4rem;
-    line-height: 4rem;
-    border:2px solid #fff;
-    outline: 2px solid #fff;
+    width: 4rem!important;
+    height: 4rem!important;
+    line-height: 4rem!important;
+    border:2px solid #fff!important;
+    outline: 2px solid #fff!important;
 }
 
 .react-datepicker{
-    width: 50vw;
-    margin: auto;
+    width: 50vw!important;
+    margin: auto!important;
 }
 
 
 .react-datepicker__month-container {
-    float: none;
+    float: none!important;
 }
 
 @media screen and (min-width: 640px) {
     .react-datepicker{
-        width: 45vw;
-        margin: auto;
+        width: 45vw!important;
+        margin: auto!important;
     }
 
     .react-datepicker__day, .react-datepicker__month-text, .react-datepicker__quarter-text, .react-datepicker__year-text {
    
-        width: 2rem;
-        height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 2rem!important;
+        height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
         
     }
     
     .react-datepicker__day-name {
-        width: 2rem;
-        height: 4rem;
-        line-height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 2rem!important;
+        height: 4rem!important;
+        line-height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
     }
 
 }
 
 @media  screen and (min-width: 1024px) {
     .react-datepicker{
-        width: 50vw;
-        margin: auto;
+        width: 50vw!important;
+        margin: auto!important;
     }
 
 
     .react-datepicker__day, .react-datepicker__month-text, .react-datepicker__quarter-text, .react-datepicker__year-text {
    
-        width: 4rem;
-        height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 4rem!important;
+        height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
         
     }
     
     .react-datepicker__day-name {
-        width: 4rem;
-        height: 4rem;
-        line-height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 4rem!important;
+        height: 4rem!important;
+        line-height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
     }
 
     
@@ -84,26 +84,26 @@ input[type="file"] {
 
 @media  screen and (min-width: 1440px) {
     .react-datepicker{
-        width: 50vw;
-        margin: auto;
+        width: 50vw!important;
+        margin: auto!important;
     }
 
 
     .react-datepicker__day, .react-datepicker__month-text, .react-datepicker__quarter-text, .react-datepicker__year-text {
    
-        width: 7.5rem;
-        height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 7.5rem!important;
+        height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
         
     }
     
     .react-datepicker__day-name {
-        width: 7.5rem;
-        height: 4rem;
-        line-height: 4rem;
-        border:2px solid #fff;
-        outline: 2px solid #fff;
+        width: 7.5rem!important;
+        height: 4rem!important;
+        line-height: 4rem!important;
+        border:2px solid #fff!important;
+        outline: 2px solid #fff!important;
     }
 
     
